--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -10,290 +10,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "62c1e524",
+   "execution_count": null,
+   "id": "46fca72b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import KFold, cross_val_score\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_absolute_error, make_scorer\n",
-    "import numpy as np\n",
-    "\n",
-    "# Load data\n",
-    "url = \"https://raw.githubusercontent.com/Patrick0481/Intro-to-modeling/refs/heads/main/1654308boston.csv\"\n",
-    "BostonData = pd.read_csv(url)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "caeb89fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAD for each fold: [50.17820752 56.61508047 49.90871609 49.48648116 41.44634671]\n",
-      "Average MAD across 5 folds: 49.5269663890078\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Linear Regression\n",
-    "# Define features and target\n",
-    "X = BostonData.drop(columns=['MEDV'])\n",
-    "y = BostonData['MEDV']\n",
-    "\n",
-    "# Convert categorical (text) columns into numeric dummy variables\n",
-    "X = pd.get_dummies(X, drop_first=True)\n",
-    "\n",
-    "# Initialize model\n",
-    "model = LinearRegression()\n",
-    "\n",
-    "# Define 5-fold cross-validation\n",
-    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
-    "\n",
-    "# Define custom scoring function for MAD (MAE)\n",
-    "mad_scorer = make_scorer(mean_absolute_error, greater_is_better=False)\n",
-    "\n",
-    "# Perform 5-fold CV\n",
-    "mad_scores = cross_val_score(model, X, y, scoring=mad_scorer, cv=kf)\n",
-    "\n",
-    "# Convert to positive MAD values\n",
-    "mad_scores = -mad_scores\n",
-    "\n",
-    "print(\"MAD for each fold:\", mad_scores)\n",
-    "print(\"Average MAD across 5 folds:\", np.mean(mad_scores))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "dcff0cd3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Optimal Lasso alpha: 0.1206792640639329\n",
-      "Lasso MAD for each fold: [50.10602111 56.95258294 49.42822367 49.27285137 41.69215057]\n",
-      "Average Lasso MAD: 49.490365931311686\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "from sklearn.linear_model import RidgeCV, LassoCV\n",
-    "\n",
-    "# Load and prepare data\n",
-    "url = \"https://raw.githubusercontent.com/Patrick0481/Intro-to-modeling/refs/heads/main/1654308boston.csv\"\n",
-    "BostonData = pd.read_csv(url)\n",
-    "\n",
-    "X = BostonData.drop(columns=['MEDV'])\n",
-    "y = BostonData['MEDV']\n",
-    "\n",
-    "# One-hot encode categorical variables\n",
-    "X = pd.get_dummies(X, drop_first=True)\n",
-    "\n",
-    "# Define 5-fold cross-validation\n",
-    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
-    "mad_scorer = make_scorer(mean_absolute_error, greater_is_better=False)\n",
-    "\n",
-    "#Lasso Regression\n",
-    "lasso = LassoCV(alphas=alphas, cv=kf, random_state=42)\n",
-    "lasso.fit(X, y)\n",
-    "lasso_alpha = lasso.alpha_\n",
-    "\n",
-    "lasso_mad = -cross_val_score(LassoCV(alphas=[lasso_alpha], cv=kf, random_state=42),\n",
-    "                             X, y, scoring=mad_scorer, cv=kf)\n",
-    "print(\"\\nOptimal Lasso alpha:\", lasso_alpha)\n",
-    "print(\"Lasso MAD for each fold:\", lasso_mad)\n",
-    "print(\"Average Lasso MAD:\", np.mean(lasso_mad))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e1114a36",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimal Ridge alpha: 0.21209508879201905\n",
-      "Ridge MAD for each fold: [50.20095665 57.07464413 49.09781348 49.15122338 41.77457449]\n",
-      "Average Ridge MAD: 49.45984242532262\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Ridge Regression\n",
-    "alphas = np.logspace(-3, 3, 50)  # 50 alpha values from 0.001 to 1000\n",
-    "ridge = RidgeCV(alphas=alphas, cv=kf, scoring=mad_scorer)\n",
-    "ridge.fit(X, y)\n",
-    "ridge_alpha = ridge.alpha_\n",
-    "\n",
-    "ridge_mad = -cross_val_score(RidgeCV(alphas=[ridge_alpha]), X, y,\n",
-    "                             scoring=mad_scorer, cv=kf)\n",
-    "print(\"Optimal Ridge alpha:\", ridge_alpha)\n",
-    "print(\"Ridge MAD for each fold:\", ridge_mad)\n",
-    "print(\"Average Ridge MAD:\", np.mean(ridge_mad))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "52dc4286",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\patri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 38ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\patri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 36ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\patri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 48ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\patri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 31ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\patri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
-      "MAD for each fold: [38.70954895019531, 49.25181198120117, 37.30810546875, 43.42402648925781, 46.83283233642578]\n",
-      "Average MAD across 5 folds: 43.105265045166014\n"
-     ]
-    }
-   ],
-   "source": [
-    "#%pip install tensorflow\n",
-    "#%pip install pandas \n",
-    "#%pip install scikit-learn\n",
-    "#%pip install numpy\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import KFold\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import LinearRegression, RidgeCV, LassoCV\n",
+    "from sklearn.metrics import make_scorer, mean_absolute_error\n",
+    "\n",
+    "# Neural network imports\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.wrappers.scikit_learn import KerasRegressor\n",
     "from tensorflow.keras.optimizers import Adam\n",
+    "import tensorflow as tf\n",
     "\n",
     "# Load and prepare data\n",
     "url = \"https://raw.githubusercontent.com/Patrick0481/Intro-to-modeling/refs/heads/main/1654308boston.csv\"\n",
     "BostonData = pd.read_csv(url)\n",
-    "\n",
-    "X = BostonData.drop(columns=['MEDV'])\n",
+    "X = pd.get_dummies(BostonData.drop(columns=['MEDV']), drop_first=True)\n",
     "y = BostonData['MEDV']\n",
     "\n",
-    "# One-hot encode categorical variables\n",
-    "X = pd.get_dummies(X, drop_first=True)\n",
-    "\n",
-    "# Standardize numeric features (important for neural networks)\n",
-    "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
-    "\n",
-    "# Define 5-fold cross-validation\n",
+    "# Define 5-fold CV and MAD scorer\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
-    "mad_scores = []\n",
+    "mad_scorer = make_scorer(mean_absolute_error, greater_is_better=False)\n",
     "\n",
-    "# Function to build the model\n",
-    "def build_model(input_dim):\n",
+    "# ======================================\n",
+    "# 1️⃣ Linear Regression\n",
+    "# ======================================\n",
+    "linear_pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('lr', LinearRegression())\n",
+    "])\n",
+    "\n",
+    "linear_mad = -cross_val_score(linear_pipeline, X, y, scoring=mad_scorer, cv=kf)\n",
+    "print(\"Linear Regression MAD per fold:\", np.round(linear_mad, 3))\n",
+    "print(\"Average Linear Regression MAD:\", np.round(np.mean(linear_mad), 3))\n",
+    "\n",
+    "# ======================================\n",
+    "# 2️⃣ Ridge and Lasso Regression\n",
+    "# ======================================\n",
+    "alphas = np.logspace(-3, 3, 100)\n",
+    "\n",
+    "ridge = RidgeCV(alphas=alphas, cv=kf)\n",
+    "ridge_pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('ridge', ridge)\n",
+    "])\n",
+    "ridge_pipeline.fit(X, y)\n",
+    "ridge_alpha = ridge_pipeline.named_steps['ridge'].alpha_\n",
+    "ridge_mad = -cross_val_score(ridge_pipeline, X, y, scoring=mad_scorer, cv=kf)\n",
+    "print(\"\\nOptimal Ridge alpha:\", ridge_alpha)\n",
+    "print(\"Average Ridge MAD:\", np.round(np.mean(ridge_mad), 3))\n",
+    "\n",
+    "lasso = LassoCV(alphas=alphas, cv=kf, random_state=42, max_iter=10000)\n",
+    "lasso_pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('lasso', lasso)\n",
+    "])\n",
+    "lasso_pipeline.fit(X, y)\n",
+    "lasso_alpha = lasso_pipeline.named_steps['lasso'].alpha_\n",
+    "lasso_mad = -cross_val_score(lasso_pipeline, X, y, scoring=mad_scorer, cv=kf)\n",
+    "print(\"\\nOptimal Lasso alpha:\", lasso_alpha)\n",
+    "print(\"Average Lasso MAD:\", np.round(np.mean(lasso_mad), 3))\n",
+    "\n",
+    "# ======================================\n",
+    "# 3️⃣ Neural Network\n",
+    "# ======================================\n",
+    "def build_nn():\n",
     "    model = Sequential([\n",
-    "        Dense(512, activation='relu', input_dim=input_dim),\n",
+    "        Dense(512, activation='relu', input_shape=(X.shape[1],)),\n",
     "        Dense(512, activation='relu'),\n",
     "        Dense(512, activation='relu'),\n",
     "        Dense(512, activation='relu'),\n",
-    "        Dense(1)  # output layer (regression -> no activation)\n",
+    "        Dense(1)  # Output layer for regression\n",
     "    ])\n",
-    "    model.compile(optimizer=Adam(),\n",
-    "                  loss='mean_absolute_error')  # MAD loss\n",
+    "    model.compile(optimizer=Adam(), loss='mean_absolute_error', metrics=['mae'])\n",
     "    return model\n",
     "\n",
-    "# 5-fold CV training\n",
-    "for train_idx, test_idx in kf.split(X_scaled):\n",
-    "    X_train, X_test = X_scaled[train_idx], X_scaled[test_idx]\n",
-    "    y_train, y_test = y.iloc[train_idx], y.iloc[test_idx]\n",
-    "    \n",
-    "    model = build_model(X_train.shape[1])\n",
-    "    model.fit(X_train, y_train,\n",
-    "              epochs=100,\n",
-    "              batch_size=16,\n",
-    "              verbose=0)  # silent training\n",
-    "    \n",
-    "    y_pred = model.predict(X_test).flatten()\n",
-    "    mad = mean_absolute_error(y_test, y_pred)\n",
-    "    mad_scores.append(mad)\n",
+    "# Wrap Keras model for scikit-learn\n",
+    "nn = KerasRegressor(build_fn=build_nn, epochs=100, batch_size=16, verbose=0)\n",
     "\n",
-    "print(\"MAD for each fold:\", mad_scores)\n",
-    "print(\"Average MAD across 5 folds:\", np.mean(mad_scores))"
+    "nn_pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('nn', nn)\n",
+    "])\n",
+    "\n",
+    "nn_mad = -cross_val_score(nn_pipeline, X, y, scoring=mad_scorer, cv=kf)\n",
+    "print(\"\\nNeural Network MAD per fold:\", np.round(nn_mad, 3))\n",
+    "print(\"Average Neural Network MAD:\", np.round(np.mean(nn_mad), 3))"
    ]
   }
  ],
