--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -5,12 +5,12 @@
    "id": "ee6ca30e",
    "metadata": {},
    "source": [
-    "Assignment 3"
+    "Assignment 3 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "62c1e524",
    "metadata": {},
    "outputs": [],
@@ -20,16 +20,18 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_absolute_error, make_scorer\n",
     "import numpy as np\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
     "\n",
     "# Load data\n",
     "url = \"https://raw.githubusercontent.com/Patrick0481/Intro-to-modeling/refs/heads/main/1654308boston.csv\"\n",
-    "BostonData = pd.read_csv(url)\n",
-    "\n"
+    "BostonData = pd.read_csv(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "caeb89fb",
    "metadata": {},
    "outputs": [
@@ -37,8 +39,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAD for each fold: [50.17820752 56.61508047 49.90871609 49.48648116 41.44634671]\n",
-      "Average MAD across 5 folds: 49.5269663890078\n"
+      "MAD for each fold: [50.178 56.615 49.909 49.486 41.446]\n",
+      "Average MAD across 5 folds: 49.527\n"
      ]
     }
    ],
@@ -48,31 +50,30 @@
     "X = BostonData.drop(columns=['MEDV'])\n",
     "y = BostonData['MEDV']\n",
     "\n",
-    "# Convert categorical (text) columns into numeric dummy variables\n",
+    "# Convert categorical variables to dummy variables\n",
     "X = pd.get_dummies(X, drop_first=True)\n",
-    "\n",
-    "# Initialize model\n",
-    "model = LinearRegression()\n",
     "\n",
     "# Define 5-fold cross-validation\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
-    "# Define custom scoring function for MAD (MAE)\n",
+    "# Define MAD scorer\n",
     "mad_scorer = make_scorer(mean_absolute_error, greater_is_better=False)\n",
     "\n",
+    "# Linear Regression with scaling\n",
+    "linear_pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),   \n",
+    "    ('linear', LinearRegression())])\n",
+    "\n",
     "# Perform 5-fold CV\n",
-    "mad_scores = cross_val_score(model, X, y, scoring=mad_scorer, cv=kf)\n",
+    "mad_scores = -cross_val_score(linear_pipeline, X, y, scoring=mad_scorer, cv=kf)\n",
     "\n",
-    "# Convert to positive MAD values\n",
-    "mad_scores = -mad_scores\n",
-    "\n",
-    "print(\"MAD for each fold:\", mad_scores)\n",
-    "print(\"Average MAD across 5 folds:\", np.mean(mad_scores))"
+    "print(\"MAD for each fold:\", np.round(mad_scores, 3))\n",
+    "print(\"Average MAD across 5 folds:\", np.round(np.mean(mad_scores), 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "dcff0cd3",
    "metadata": {},
    "outputs": [
@@ -81,19 +82,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Optimal Lasso alpha: 0.1206792640639329\n",
-      "Lasso MAD for each fold: [50.10602111 56.95258294 49.42822367 49.27285137 41.69215057]\n",
-      "Average Lasso MAD: 49.490365931311686\n"
+      "Optimal Lasso alpha: 0.6135907273413176\n",
+      "Lasso MAD for each fold: [51.23015929 59.58740563 48.49890866 50.32796533 43.01358695]\n",
+      "Average Lasso MAD: 50.531605169325914\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "from sklearn.linear_model import RidgeCV, LassoCV\n",
-    "\n",
-    "# Load and prepare data\n",
-    "url = \"https://raw.githubusercontent.com/Patrick0481/Intro-to-modeling/refs/heads/main/1654308boston.csv\"\n",
-    "BostonData = pd.read_csv(url)\n",
     "\n",
     "X = BostonData.drop(columns=['MEDV'])\n",
     "y = BostonData['MEDV']\n",
@@ -101,14 +97,18 @@
     "# One-hot encode categorical variables\n",
     "X = pd.get_dummies(X, drop_first=True)\n",
     "\n",
+    "alphas = np.logspace(-3, 3, 100)  # from 0.001 to 1000\n",
+    "\n",
     "# Define 5-fold cross-validation\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "mad_scorer = make_scorer(mean_absolute_error, greater_is_better=False)\n",
     "\n",
     "#Lasso Regression\n",
-    "lasso = LassoCV(alphas=alphas, cv=kf, random_state=42)\n",
-    "lasso.fit(X, y)\n",
-    "lasso_alpha = lasso.alpha_\n",
+    "lasso_pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),                # normalize features\n",
+    "    ('lasso', LassoCV(alphas=alphas, cv=kf, random_state=42, max_iter=10000))])\n",
+    "lasso_pipeline.fit(X, y)\n",
+    "lasso_alpha = lasso_pipeline.named_steps['lasso'].alpha_\n",
     "\n",
     "lasso_mad = -cross_val_score(LassoCV(alphas=[lasso_alpha], cv=kf, random_state=42),\n",
     "                             X, y, scoring=mad_scorer, cv=kf)\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "e1114a36",
    "metadata": {},
    "outputs": [
@@ -127,34 +127,123 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal Ridge alpha: 0.21209508879201905\n",
-      "Ridge MAD for each fold: [50.20095665 57.07464413 49.09781348 49.15122338 41.77457449]\n",
-      "Average Ridge MAD: 49.45984242532262\n"
+      "Optimal Ridge alpha: 0.001\n",
+      "Ridge MAD for each fold: [52.383 59.525 42.376 47.873 45.486]\n",
+      "Average Ridge MAD: 49.529\n"
      ]
     }
    ],
    "source": [
     "#Ridge Regression\n",
-    "alphas = np.logspace(-3, 3, 50)  # 50 alpha values from 0.001 to 1000\n",
-    "ridge = RidgeCV(alphas=alphas, cv=kf, scoring=mad_scorer)\n",
-    "ridge.fit(X, y)\n",
-    "ridge_alpha = ridge.alpha_\n",
+    "alphas = np.logspace(-3, 3, 50)\n",
+    "mad_scorer = make_scorer(mean_absolute_error, greater_is_better=False)\n",
     "\n",
-    "ridge_mad = -cross_val_score(RidgeCV(alphas=[ridge_alpha]), X, y,\n",
-    "                             scoring=mad_scorer, cv=kf)\n",
+    "# Ridge Regression with scaling inside a Pipeline\n",
+    "ridge_pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),            # normalize features\n",
+    "    ('ridge', RidgeCV(alphas=alphas, cv=5)) # alpha selection\n",
+    "])\n",
+    "\n",
+    "# Fit Ridge pipeline on full data to get best alpha\n",
+    "ridge_pipeline.fit(X, y)\n",
+    "ridge_alpha = ridge_pipeline.named_steps['ridge'].alpha_\n",
+    "\n",
+    "# Evaluate Ridge with 5-fold CV\n",
+    "ridge_mad = -cross_val_score(ridge_pipeline, X, y, scoring=mad_scorer, cv=5)\n",
+    "\n",
     "print(\"Optimal Ridge alpha:\", ridge_alpha)\n",
-    "print(\"Ridge MAD for each fold:\", ridge_mad)\n",
-    "print(\"Average Ridge MAD:\", np.mean(ridge_mad))\n"
+    "print(\"Ridge MAD for each fold:\", np.round(ridge_mad, 3))\n",
+    "print(\"Average Ridge MAD:\", np.round(np.mean(ridge_mad), 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "52dc4286",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\patri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\patri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\patri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:5 out of the last 7 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x000001701C4F3380> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "\u001b[1m1/3\u001b[0m \u001b[32m━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━\u001b[0m \u001b[1m0s\u001b[0m 48ms/stepWARNING:tensorflow:6 out of the last 9 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x000001701C4F3380> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 29ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\patri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 26ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\patri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 25ms/step\n",
+      "MAD for each fold: [36.97802734375, 47.80286407470703, 39.39806365966797, 44.63582229614258, 47.475582122802734]\n",
+      "Average MAD across 5 folds: 43.25807189941406\n"
+     ]
+    }
+   ],
    "source": [
-    "%pip install tensorflow\n",
+    "#%pip install tensorflow\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
